--- a/test-output/old/Functional Suite/methods-alphabetical.html
+++ b/test-output/old/Functional Suite/methods-alphabetical.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:39</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:39</td>   <td>16</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@78e4deb0]">&lt;&lt;closingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:38</td>   <td>-42</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@78e4deb0]">&gt;&gt;creatingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:39</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@78e4deb0]">doLogin</td> 
-  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="7978a5">  <td>20/07/04 14:14:39</td>   <td>225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@5afa3c9]">doLogin</td> 
-  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:39</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@78e4deb0]">doUserReg</td> 
-  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="e4c792">  <td>20/07/04 14:14:39</td>   <td>167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@15043a2f]">doUserReg</td> 
-  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="e4c792">  <td>20/07/04 14:14:39</td>   <td>181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@15043a2f]">fourthTest</td> 
-  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:39</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b3eeae">  <td>20/07/04 14:14:39</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@78e4deb0]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="d2d9cb">  <td>20/07/04 14:14:38</td>   <td>-55</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@5afa3c9]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="d2d9cb">  <td>20/07/04 14:14:39</td>   <td>305</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@5afa3c9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="e4c792">  <td>20/07/04 14:14:39</td>   <td>175</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@15043a2f]">thirdTest</td> 
-  <td>main@2107443224</td>   <td></td> </tr>
-<tr bgcolor="b075bb">  <td>20/07/04 14:14:39</td>   <td>127</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@712625fd]">validateTitles</td> 
-  <td>main@2107443224</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>19</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>-86</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@5c7bfdc1]">doLogin</td> 
+  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="bb6ba9">  <td>20/07/05 10:27:59</td>   <td>295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@642a7222]">doLogin</td> 
+  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@5c7bfdc1]">doUserReg</td> 
+  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8474aa">  <td>20/07/05 10:27:59</td>   <td>242</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@3b35a229]">doUserReg</td> 
+  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8474aa">  <td>20/07/05 10:27:59</td>   <td>266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@3b35a229]">fourthTest</td> 
+  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8ca085">  <td>20/07/05 10:27:59</td>   <td>7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@5c7bfdc1]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="737fd5">  <td>20/07/05 10:27:59</td>   <td>-113</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@642a7222]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="737fd5">  <td>20/07/05 10:27:59</td>   <td>336</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@642a7222]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="8474aa">  <td>20/07/05 10:27:59</td>   <td>259</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@3b35a229]">thirdTest</td> 
+  <td>main@2107577743</td>   <td></td> </tr>
+<tr bgcolor="9f6368">  <td>20/07/05 10:27:59</td>   <td>145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@45385f75]">validateTitles</td> 
+  <td>main@2107577743</td>   <td></td> </tr>
 </table>
