--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9588e6">  <td>20/07/03 19:57:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestSkip.isSkip()[pri:0, instance:testcases.TestSkip@55a147cc]">isSkip</td> 
-  <td>main@443934570</td>   <td></td> </tr>
+<tr bgcolor="92827e">  <td>20/07/06 11:21:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameterization.doLogin(java.lang.String, java.lang.String)[pri:0, instance:parameterization.TestParameterization@2a265ea9]">doLogin</td> 
+  <td>main@589273327</td>   <td></td> </tr>
+<tr bgcolor="92827e">  <td>20/07/06 11:21:22</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameterization.doLogin(java.lang.String, java.lang.String)[pri:0, instance:parameterization.TestParameterization@2a265ea9]">doLogin</td> 
+  <td>main@589273327</td>   <td></td> </tr>
+<tr bgcolor="92827e">  <td>20/07/06 11:21:22</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParameterization.doLogin(java.lang.String, java.lang.String)[pri:0, instance:parameterization.TestParameterization@2a265ea9]">doLogin</td> 
+  <td>main@589273327</td>   <td></td> </tr>
 </table>
